# RedRoot-Lite

./: LICENSE  README.md  installer.py
redjarvis/: __main__.py
redrootbreaker/: __main__.py  banner.py  bruteforce.py  cracker.py  utils.py
redrootdir/: __init__.py  __main__.py  banner.py  scanner_core.py  setup.py  utils.py
redrootexploit/: __main__.py  cli.py
redrootexploit/engine/: api_manager.py  exploitdb.py  github.py  vulners_api.py
redrootexploit/utils/: banner.py  output.py
redrootfinger/: __init__.py  banner.py  cli.py  cms.py  headers.py  js_frameworks.py  scanner.py  setup.py  waf.py
redrootfuzz/: __init__.py  __main__.py  cli.py  fuzzer.py
redrootlfi/: banner.py  cli.py  pyproject.toml  scanner.py  utils.py
redrootlfi/payloads/: lfi.txt
redrootlistener/: __main__.py
redrootmitm/: __main__.py
redrootps/: __main__.py
redrootps/scanner/: osdetect.py  ports.py  services.py
redrootps/utils/: display.py  output.py
redrootrecon/: __main__.py
redrootsniffer/: __main__.py  banner.py  parser.py  sniffer.py  summary.py
redrootsqli/: auth_bypass.py  blind_sqli.py  cli.py  constants.py  request_sqli.py  union_sqli.py
redrootvenom/: __main__.py  logger.py  pyproject.toml  utils.py
